<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dimen_10_20"
    android:paddingRight="@dimen/dimen_10_20">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:text="@string/product_applicaiton_version"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/disable_text_color"/>
        <TextView
            android:id="@+id/product_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="Lam Thi Hong Diem"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/disable_text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:text="@string/product_user_id"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/disable_text_color"/>
        <TextView
            android:id="@+id/product_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="Design"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/disable_text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:text="@string/product_company"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/disable_text_color"/>
        <TextView
            android:id="@+id/product_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="Manager"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/disable_text_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_utilities"
            android:paddingBottom="@dimen/dimen_10_20"
            android:paddingTop="@dimen/dimen_10_20"
            android:textSize="16sp"
            android:textColor="@color/disable_text_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dimen_5_10">
            <ImageView
                android:layout_width="@dimen/dimen_30_60"
                android:layout_height="@dimen/dimen_30_60"
                android:src="@drawable/lock_screen"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16_32"
                android:textColor="@color/light_black"
                android:text="@string/product_lock_screen"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/dimen_4_8"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/disable_text_color"/>

        <TextView
            android:id="@+id/tv_notification_settings"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16_32"
            android:textColor="@color/light_black"
            android:text="@string/settings_notification"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_4_8"/>

    </LinearLayout>


</ScrollView>